<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">CampusAssist12</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="xuexiaoshenghuo">学校生活</string>
    <string name="chuxingzhinan">出行指南</string>
    <string name="youwannanchang">游玩南昌</string>
    <string name="haomabaishitong">号码百事通</string>
    <string name="title">校园通</string>
    <string name="xiaoxun">校训：静思笃行，持中秉正</string>
    <string name="campusBuild">校区平面图</string>
    <string name="campusScenery">校园风景</string>
    <string name="freshAssist">新生指南</string>
    <string name="zhengli">整理新装</string>
    <string name="dida">抵达目的地</string>
    <string name="ruxiao">入校第一站</string>
    <string name="woshi">我是一个兵</string>
    <string name="shenghuo">生活万花筒</string>
    <string name="jiejiao">结交新朋友</string>
    <string name="qinlian">勤练有补助</string>
    <string name="xuejie">学姐学长寄语</string>
    <string name="xianluchaxun">线路查询</string>
    <string name="wodeweizhi">我的位置</string>
    <string name="weizhichaxun">位置查询</string>
    <string name="city">城市</string>
    <string name="bus">输入公交路线</string>
    <string name="keyhint">关键点如KTV</string>
     <string name="addPhone">添加新号码</string>
    <string name="exit">退出</string> 
    <string name="name">姓名</string> 
    <string name="phone">联系电话</string>
    <string name="type">分类</string>
    <string name="keyword">关键字</string>
    <string name="submit">提交</string> 
    <string name="reset">重置</string>
    <string name="hint">请输入姓名或号码</string>
    <string name="query">搜索</string>
    <string name="result">查询结果</string>
    <string name="goBack">返回</string>
    <string name="title_activity_campus_life">CampusLifeActivity</string>
    <string name="title_activity_campus_build">CampusBuildActivity</string>
    <string name="title_activity_campus_scenery">CampusSceneryActivity</string>
    <string name="title_activity_detail_info">DetailInfoActivity</string>
    <string name="title_activity_fresh_assist">FreshAssistActivity</string>
    <string name="title_activity_gongjiaoluxian">GongjiaoluxianActivity</string>
    <string name="title_activity_position">PositionActivity</string>
    <string name="title_activity_my_over_lay">MyOverLayActivity</string>
    <string name="title_activity_wodeweizhi">WodeweizhiActivity</string>
    <string name="title_activity_chuxinzhinan">ChuxinzhinanActivity</string>
    <string name="title_activity_scenery">SceneryActivity</string>
    <string name="title_activity_scenery_show">SceneryShowActivity</string>
    <string name="title_activity_phone_list">PhoneListActivity</string>
    <string name="title_activity_add_phone">AddPhoneActivity</string>
    <string name="title_activity_result">ResultActivity</string>

</resources>