<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:paddingLeft="10dp"
    android:background="@drawable/bg"
    android:layout_height="match_parent" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/addPhone"
        android:textSize="24sp"
        android:textColor="#000000"/>
    <TableRow >
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/name"/>
       <EditText 
           android:layout_width="200dp"
           android:layout_height="wrap_content"
           android:id="@+id/name"/>
    </TableRow>
    <TableRow >
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/phone"/>
       <EditText 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:inputType="phone"
           android:id="@+id/phone"/>
    </TableRow>
    <TableRow >
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/type"/>
       <EditText 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/type"/>
    </TableRow>
    <TableRow >
       <TextView 
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/keyword"/>
       <EditText 
           android:layout_width="match_parent"
           android:layout_height="wrap_content"
           android:id="@+id/keyword"/>
    </TableRow>
    <LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="center_horizontal"
	    android:orientation="horizontal">
       <Button 
           android:id="@+id/submit"
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/submit"/>
       <Button
           android:id="@+id/reset"  
           android:layout_width="wrap_content"
           android:layout_height="wrap_content"
           android:text="@string/reset"/>
    </LinearLayout>    
	
</TableLayout>
