<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:background="@drawable/chuxingzhinan"
    android:gravity="center_vertical|right"
    android:paddingRight="20dp"
    android:layout_height="match_parent" >

    
	<Button
        android:id="@+id/xianluchaxun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textSize="24sp"
        android:text="@string/xianluchaxun" />
    <Button
        android:id="@+id/wodeweizhi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textSize="24sp"
        android:text="@string/wodeweizhi" />
    <Button
        android:id="@+id/weizhichaxun"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textSize="24sp"
        android:text="@string/weizhichaxun" />
   
    <Button
        android:id="@+id/goBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="#00000000"
        android:textSize="24sp"
        android:text="@string/goBack" />

</LinearLayout>